deployments/workloads/media/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  selector:
    app: plex
  ports:
    - protocol: TCP
      port: 80
      targetPort: 32400
