deployments/workloads/media/plex/cilium.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: plex
spec:
  endpointSelector:
    matchLabels:
      app: plex
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
  egress:
    - toCIDRSet:
        - cidr: 239.255.255.250/32
      toPorts:
        - ports:
            - port: "1900"
              protocol: UDP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchPattern: "images.plex.tv"
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchPattern: "tvthemes.plexapp.com"
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchPattern: "downloads.plex.tv"
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchPattern: "assets.fanart.tv"
      toPorts:
        - ports:
            - port: "80"
    - toFQDNs:
        - matchPattern: "plex.tv"
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchPattern: "pubsub.plex.tv"
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchPattern: "image.tmdb.org"
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchPattern: "secure.gravatar.com"
      toPorts:
        - ports:
            - port: "443"
